# mcux-sdk-phytec-examples

./: .gitignore  README  README.md
.github/: CODEOWNERS
.github/workflows/: publish.yml
phyboard-polis/demo_apps/hello_world/: readme.rst
phyboard-polis/demo_apps/hello_world/armgcc/: CMakeLists.txt  build_debug.sh
phyboard-polis/driver_examples/gpio/led_output/: gpio_led_output.c  readme.rst
phyboard-polis/driver_examples/gpio/led_output/armgcc/: CMakeLists.txt  build_flash_debug.sh
phyboard-polis/driver_examples/gpt/timer/: clock_config.c  gpt_timer.c  readme.rst
phyboard-polis/driver_examples/gpt/timer/armgcc/: CMakeLists.txt  build_ddr_release.sh
phyboard-polis/driver_examples/pwm/: board.h  pin_mux.c  pwm.c  readme.rst
phyboard-polis/driver_examples/pwm/armgcc/: CMakeLists.txt
phyboard-polis/driver_examples/sdma/scatter_gather/: clock_config.c  readme.rst
phyboard-polis/driver_examples/tmu/temperature_polling/: board.c  clock_config.c  readme.txt
phyboard-polis/driver_examples/wdog/: board.h
phyboard-polis/driver_examples/wdog/armgcc/: CMakeLists.txt
phyboard-polis/multicore_examples/rpmsg_lite_str_echo_rtos/: board.c  clock_config.c
phyboard-polis/multicore_examples/rpmsg_lite_str_echo_rtos/armgcc/: CMakeLists.txt  build_flash_release.sh  build_release.sh  config.cmake
phyboard-pollux/demo_apps/hello_world/: clock_config.c
phyboard-pollux/demo_apps/hello_world/armgcc/: CMakeLists.txt  build_ddr_debug.sh  build_ddr_release.sh
phyboard-pollux/driver_examples/canfd/loopback/: board.c  clock_config.c  readme.rst
phyboard-pollux/driver_examples/ecspi/ecspi_loopback/: readme.rst
phyboard-pollux/driver_examples/gpt/timer/: board.h  gpt_timer.c  readme.rst
phyboard-pollux/driver_examples/sdma/scatter_gather/: board.c  board.h  clock_config.c  readme.rst
phyboard-pollux/driver_examples/tmu/temperature_polling/: board.h  clock_config.c  readme.txt
phyboard-pollux/driver_examples/wdog/: clock_config.c  readme.txt
phyboard-pollux/driver_examples/wdog/armgcc/: CMakeLists.txt  build_flash_debug.sh
phytec_pcm073/: phytec_pcm073_example_manifest_v3_10.xml
phytec_pcm073/audio_examples/maestro_playback/: pin_mux.c  pin_mux.h
phytec_pcm073/audio_examples/maestro_playback/cm7/: app_definitions.h  maestro_playback_v3_10.xml  main.c  sdmmc_config.c  streamer_pcm.c
phytec_pcm073/azure_rtos_examples/guix_washing_machine_hd/cm7/: clock_config.c  clock_config.h  guix_washing_machine_hd_v3_10.xml  pin_mux.c  pin_mux.h
phytec_pcm073/demo_apps/reg_rw/cm7/: pin_mux.c  reg_rw.c  reg_rw_cm7_v3_10.xml
phytec_pcm073/demo_apps/reg_rw/cm7/armgcc/: CMakeLists.txt  build_all.sh  build_flexspi_nor_debug.sh  build_flexspi_nor_sdram_debug.sh  build_flexspi_nor_sdram_release.sh  build_sdram_release.sh  build_sdram_txt_debug.sh  build_sdram_txt_release.sh  config.cmake
phytec_pcm073/driver_examples/gpio/led_output/: pin_mux.c  pin_mux.h
phytec_pcm073/eiq_examples/mpp_camera_view/: board.h  clock_config.c  mpp_camera_view_cm7_v3_10.xml  pin_mux.c  pin_mux.h
phytec_pcm073/eiq_examples/mpp_camera_view/armgcc/: CMakeLists.txt  build_flexspi_nor_sdram_debug.sh  build_flexspi_nor_sdram_release.sh  flags.cmake
phytec_pcm073/sdmmc_examples/sdcard_fatfs/cm7/: sdcard_fatfs_cm7_v3_10.xml  sdmmc_config.c  sdmmc_config.h
scripts/: add_autogen_cc.sh  add_sdk_options.sh  autogen_compile_commands.sed  build_all.sh  clean_all.sh  cmp_boardc.sh  rm_hardcoded_sdk.sed  setenv
(+93 files in other folders)
